<resources>
    <string name="app_name">Cultural Map of Wroclaw</string>
    <string name="wroclaw">Wrocław</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="list_places">Places</string>
    <string name="list_events">Events</string>
    <string name="list_routes">Routes</string>

    <string name="action_settings">Settings</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_trails">Trails</string>
    <string name="nav_events">Events</string>
    <string name="nav_places">Places</string>
    <string name="title_activity_poi_details">POI details</string>
    <string name="title_activity_event_details">Event details</string>
    <string name="title_activity_route_details">Route details</string>
    <string name="activity_poi_details_description">Description</string>
    <string name="activity_poi_details_opening_hours">Opening hours</string>
    <string name="activity_poi_details_additional_information">Additional information</string>
    <string name="activity_event_details_description">Description</string>
    <string name="activity_event_details_date">Date</string>
    <string name="activity_event_details_additional_information">Additional information</string>
    <string name="activity_event_details_starts">Starts</string>
    <string name="activity_event_details_ends">Ends</string>
    <string name="activity_route_details_description">Description</string>
    <string name="activity_route_details_points">Points</string>
    <string name="activity_route_details_information">Information</string>
    <string name="fragment_wroclaw_description_header">Description</string>
    <string name="fragment_wroclaw_description"><![CDATA[Historia Wrocławia jest bardzo bogata, pełna wydarzeń niezwykłych, ciekawych czy też tragicznych. Przez wiele lat Wrocław rozwijał się prężnie ale kres lat jego świetności nastał wraz z nadejściem II wojny światowej. Wojna zostawiła Wrocław w ruinach, nie tylko materialnie. Dziesiątki lat zajęło powojennym pionierom oraz ich potomkom zbudowanie nowego Wrocławia. Z całą pewnością można stwierdzić że nowy Wrocław jest miastem pełnym kultury. Najlepiej o tym świadczy fakt że 21 czerwca 2011 roku miasto otrzymało tytuł Europejskiej Stolicy Kultury oraz Światowej Stolicy Książki na rok 2016. Już tylko w ramach tego projektu powstały inicjatywy takie jak WuWA 2, Kino Nowe Horyzonty, Noc Literatury, Domek Miedziorytnika. Dodatkowo Wrocław będzie miał przyjemność być gospodarzem wydarzeń takich jak ceremonia przyznania Europejskiej Nagrody Filmowej czy też World Music Days.\n\n Wrocław charakteryzuje się dużą ilością obiektów muzealnych. To właśnie tutaj znajduje się słynna Panorama Racławicka oraz jedyne w Polce Muzeum Architektury. Łącznie we Wrocławiu znajdziemy ponad 20 muzeów.\n\n W kwestii teatrów również mamy do czynienia z dużym zagęszczeniem – obecnie we Wrocławiu funkcjonuje ponad 20 teatrów w tym Teatr Polski złożony z trzech scen oraz Teatr Współczesny który powstał w latach 70. XX wieku.\n\n Melomani również nie będą zawiedzeni bowiem do ich dyspozycji jest prześwietna Opera Wrocławska podtrzymująca wrocławskie tradycje operowe których początki sięgają pierwszej połowy XVII w. oraz nowopowstałe Narodowe Forum Muzyki powstałe w wyniku połączenia Filharmonii Wrocławskiej oraz Międzynarodowego Festiwalu Wratislavia Cantans. Obecnie Narodowe Forum Muzyki organizuje działalność 11 zespołów instrumentalnych i wokalnych, koordynuje 7 wydarzeń o międzynarodowym zasięgu a także prowadzi działalność edukacyjną.\n\n Ostatecznie do dziedzictwa kulturowego Wrocławia należy również zaliczyć obiekty sakralne na jego terenie. Na terenie Wrocławia zlokalizowanych jest około 80 kościołów katolickich, jeden greckokatolicki, jeden polskokatolicki, dwie świątynie prawosławne, kilkanaście protestanckich, trzy kompleksy Sal Królestwa Świadków Jehowy, jedna synagoga oraz kilka ośrodków buddyjskich. Do najstarszych z nich należą XII-wieczny Kościół św. Wojciecha, a także Archikatedra św. Jana Chrzciciela z XI wieku.]]></string>
    <string name="nav_about">About Wroclaw</string>
    <string name="poi_card_details">Details</string>
    <string name="activity_poi_details_contact">Contact</string>
    <string name="distance">Distance: %1$5.2f km</string>
    <string name="duration">Duration: %1$2.1f h</string>
    <string name="price">Price: %1$s</string>

    <string name="connection_error">Could not connect to server. Please try again later.</string>
    <string name="about_wroclaw">About Wroclaw</string>
</resources>
